@@ -1,0 +1,21 @@
+#!/usr/bin/env python
+config = {
+  "log_name": "test",
+  "log_dir": "test_logs",
+  "log_to_console": False,
+  "key1": "value1",
+  "key2": "value2",
+  "section1": {
+
+    "subsection1": {
+      "key1": "value1",
+      "key2": "value2"
+    },
+
+    "subsection2": {
+      "key1": "value1",
+      "key2": "value2"
+    },
+
+  },
+}
